@@ -1,5 +1,10 @@
 2009-08-12  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>
 
+	* CBinding.addin.xml: Make supported file extensions more
+	  comprehensive and consistent.
+
+2009-08-12  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>
+
 	* CBinding.addin.xml: Set appropriate extension point for
 	  editor context menu command. Fixes #508838.
 
